Moved Silverlight project to src folder

--- a/src/SQLite.Net.Platform.Silverlight/SQLite.Net.Platform.Silverlight.csproj
+++ b/src/SQLite.Net.Platform.Silverlight/SQLite.Net.Platform.Silverlight.csproj
@@ -67,7 +67,7 @@
     <Compile Include="VolatileServiceSilverlight.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\src\SQLite.Net\SQLite.Net.csproj">
+    <ProjectReference Include="..\SQLite.Net\SQLite.Net.csproj">
       <Project>{4971d437-0694-4297-a8cc-146ce08c3bd9}</Project>
       <Name>SQLite.Net</Name>
     </ProjectReference>
